# Qamomile

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AGENTS.md  CLAUDE.md  LIMITATION.md  LIMITATIONS.md  LLMs.txt  QRAO_notebook.ipynb  README.md  contribute.html  genindex.html  index.html  jijmodeling_transpiler_description.ipynb  mkdocs.yml  myst.yml  nohup.out  objects.inv  py-modindex.html  pyproject.toml  qiskit_test.ipynb  qkernel_audit_report.md  qkernel_refactoring_prs.md  qsvt_periodic_poisson_ja.ipynb  qsvt_poisson_ja.ipynb  qsvt_quickstart_ja.ipynb  quickstart.html  search.html  searchindex.js  setup.py
.claude/: settings.json
.claude/hooks/: check_commit_message.py
.github/scripts/: classify-changes.sh  detect-docs-only.sh
.github/workflows/: deploy-redirect-page.yml  jupyter-book-publish.yml  lint.yml  python-publish.yml  python-test.yml  ruff.yml  zuban.yml
_sources/: index.md
_sources/autoapi/: index.rst
_sources/tutorial/: alternating_ansatz_graph_coloring.ipynb
api/: index.html
autoapi/: index.html
autoapi/core/: index.html
autoapi/qiskit/: index.html
autoapi/quri_parts/: index.html
docs/: .gitignore  .readthedocs.yaml  Makefile  README.md  _config.yml  _toc.yml  build.sh  conf.py  contribute.md  generate_api.py  index.html  index.md  myst.yml  quickstart.ipynb  references.bib
docs/api_gen/: __init__.py  annotations.py  config.py  crossref.py  discovery.py  docstrings.py  markdown.py  pages.py  rst_converter.py  toc.py
docs/assets/: colab-launch.js  custom-theme.css  lightbox.js  rtd-search.js
docs/en/: _config.yml  _toc.yml  contribute.md  index.md  installation_guide.md  myst.yml  quickstart.ipynb  references.bib
docs/github_page/: index.html
docs/ja/: _config.yml  _toc.yml  api_index.md  contribute.md  index.md  installation_guide.md  myst.yml  quickstart.ipynb
docs/overrides/: gen_ref_pages.py
docs/qamomile-lp/: index.html  jij.html  package-lock.json  package.json  vite.config.js
docs/scripts/: build_algorithm_tag_pages.py  build_doc_tags.py  inject_colab_launch.py  inject_rtd_search.py  inject_scripts.py  precommit_regen.sh
docs/skeletons/: README.md  algorithm.py  integration.py  tutorial.py  usage.py
docs/tutorial/: PennyLaneTranspiler_QAOA_usage.ipynb  Travelling_Salesman_Problem.ipynb  Using_the_PennyLaneTranspiler_in_Qamomile.ipynb  Using_the_QuriPartsTranspiler_in_Qamomile.ipynb  algebraic_operator.ipynb  alternating_ansatz_graph_coloring.ipynb  alternating_ansatz_graph_coloring_qiskit.ipynb  alternating_ansatz_graph_coloring_quri.ipynb  building_quantum_circuits.ipynb  graph_partition.ipynb  index.md  index_advance.md  local_search.ipynb  maxcut.ipynb  multi_car_paint.ipynb  qrao_tutorial.ipynb  quantum_annealing.ipynb  vertex_cover.ipynb  vqe_for_hydrogen.ipynb
docs2/: index.md  myst.yml
docs2/transpile/: transpile_flow.py
jijmodeling_transpiler_quantum/core/: __init__.py
jijmodeling_transpiler_quantum/qiskit/: __init__.py
jijmodeling_transpiler_quantum/quri_parts/: __init__.py
jijtranspiler_qiskit/: __init__.py
jijtranspiler_qiskit/ising_qubo/: ising_qubo.py
jijtranspiler_qiskit/qaoa/: ising_hamiltonian.py  to_qaoa.py
jijtranspiler_qiskit/qrao/: __init__.py  qrao21.py  qrao31.py  qrao32.py  to_qrac.py
minimal_encoding_notebook/: minimal_encoding.py  minimal_encoding_ex.py  minimal_encoding_vrp.py  minimal_encoding_with_VRP.ipynb
notebook/: Tutorial_QRAO_Quri_parts.ipynb  Tutorial_TSP_problem_QAOA_Quri_parts.ipynb  Tutorial_VertexCover.ipynb  alternating_ansatz_graph_coloring_qiskit.ipynb  alternating_ansatz_graph_coloring_quri.ipynb  jijmodeling_trasnpiler_tutorial.ipynb  minimal_encoding.ipynb  tsp_qaoa_tutorial_quri.ipynb
overrides/: gen_ref_pages.py
overrides/gen_ref_pages/: index.html
qamomile/: _utils.py
qamomile-docs/: _config.yml  _toc.yml  index.md
qamomile-docs/api/: index.md
qamomile-docs/tutorial/: alternating_ansatz_graph_coloring.ipynb
qamomile/chemistry/: __init__.py  ftqc.py  resource_estimation.py
qamomile/circuit/: __init__.py  _block_encoding.py  errors.py  resource_estimation.py
qamomile/core/: __init__.py  bitssample.py  higher_ising_model.py  ising_qubo.py  operator.py  transpiler.py
qamomile/cudaq/: __init__.py  emitter.py  exceptions.py  materializer.py  observable.py  parameter_conveter.py  transpiler.py
qamomile/hugr/: __init__.py  lowerer.py  transpiler.py
qamomile/linalg/: __init__.py  _fwht.py  _validation.py  hermitian.py  mottonen.py  pauli_lcu.py  periodic_shift_lcu.py  subspace.py
qamomile/observable/: __init__.py  hamiltonian.py
qamomile/optimization/: __init__.py  aoa.py  converter.py  fqaoa.py  gas.py  higher_ising_model.py  integer_encoding.py  ising_model.py  ising_qubo.py  pce.py  qaoa.py  qsvt_filter.py  utils.py
qamomile/pennylane/: __init__.py  exceptions.py  transpiler.py
qamomile/qbraid/: __init__.py  executor.py
qamomile/qiskit/: __init__.py  emitter.py  exceptions.py  materializer.py  observable.py  parameter_converter.py  transpiler.py
qamomile/qiskit_old/: transpiler.py
qamomile/quration/: __init__.py  materializer.py  transpiler.py
qamomile/quri_parts/: __init__.py  emitter.py  (+5 more)
reviews/: Migrate-Converters-FQAOA-review.md
search/: search_index.json
site/: 404.html  index.html  objects.inv
src/: QRAO_notebook.ipynb  QRAO_notebook_en.ipynb  README.md  tsp_qaoa_tutorial.ipynb
tests/: _cudaq_isolation.py  conftest.py  engine_cases.py  mock.py  test_32qrao.py  test_ansatz.py  test_bitssample.py  test_cudaq_import_isolation.py  test_ising_qubo.py  test_operator.py  test_parameter.py  test_qaoa.py  test_qrac.py  test_qrao.py  test_qrao32.py  test_qrao_space_efficient.py  test_to_qrac.py  utils.py
tutorial/: alternating_ansatz_graph_coloring.html  index.html
(+1622 files in other folders)
