[build-system]
requires = ["setuptools>=70.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "qamomile"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cudaq>=0.13.0",
    "jijmodeling>=2.1.0",
    "ommx>=2.3.3",
    "qiskit>=2.3.0",
    "qiskit-aer>=0.17.2",
    "sympy>=1.14.0",
]

[tool.setuptools.packages.find]
include = ["qamomile*"]

[project.optional-dependencies]
quri_parts = [
    "quri-parts-core>=0.21.1",
    "quri-parts-circuit>=0.21.1",
    "quri-parts-qulacs>=0.21.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyter-book>=2.1.0",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.8",
    "networkx>=3.0",
    "pytest>=9.0.2",
    "pylatexenc>=2.10",
    "pytest-mpl>=0.17.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.11",
    "zuban>=0.4.1",
    "griffe>=1.0.0",
    "quri-parts-core>=0.21.1",
    "quri-parts-circuit>=0.21.1",
    "quri-parts-qulacs>=0.21.1",
    "ommx-pyscipopt-adapter>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not docs'"
markers = [
    "docs: marks tests that run documentation examples",
]

[tool.setuptools_scm]
